2011-09-30  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c (get_directory): use alphasort for scandir

2011-09-28  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_shift_horizontally):
	new function

2011-09-27  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_shift_vertically):
	new function

	* avatar.c (avt_show_raw_image): make sure image is initialized

------------------------------------------------------------------------

2011-09-13  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.21.2 released

2011-09-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (SYSTEMENCODING): new macro
	(avt_mb_encoding): accepts NULL or "" for system encoding
	filechooser.c: adapted
	akfavatar.h: documented change

2011-09-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_recode_buffer):
	fix: use correct conversion descriptor (fixes title)

	* lua/audioplayer.lua:
	recode the filenames to UTF-8
	fix: check for empty list

2011-09-06  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c (avta_file_selection):
	use "" as default encoding, macro system_encoding removed again

	* avatar.c (avt_encoding): static buffer
	(avt_mb_encoding, avt_quit, avt_set_title): adapted

	* avatar.c (avt_recode_buffer, avt_recode):
	accept empty string as normal encoding

	* avatar.c (avt_mb_encoding):
	if input cannot be opened also close output

2011-09-04  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c (system_encoding): new macro
	(avta_file_selection): adapted

2011-09-01  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_initialize): set mouse visible

------------------------------------------------------------------------

2011-08-28  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.21.1 released

2011-08-25  Andreas K. Foerster  <info@akfoerster.de>

	* lua/terminal.lua: little computer as avatar
