@@ -1,3 +1,8 @@
+2011-10-01  Andreas K. Foerster  <info@akfoerster.de>
+
+	* lua/akfavatar-graphic.c: refactoring color handling
+	background color now stored for each graphic
+
 2011-09-30  Andreas K. Foerster  <info@akfoerster.de>
 
 	* filechooser.c (get_directory): use alphasort for scandir
